Work with JDK-24 static libs, vmone and a custom GraalVM build